--- a/templates/js/package.json
+++ b/templates/js/package.json
@@ -13,8 +13,11 @@
     "dev": "nodemon -q src/index.js"
   },
   "dependencies": {
-    "@modular-rest/server": "^1.11.11",
+    "@modular-rest/server": "^1.13.0",
     "dotenv": "^16.4.5",
     "koa-router": "^13.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
